# Virtual-Assistant

./: .gitignore  README.md  docker-compose.yml
server/: .dockerignore  .env.example  Dockerfile.local  bot.py  pyproject.toml
server/client/: index.html
